--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-native-i18n": "^1.0.0",
 		"react-native-simple-store": "^1.1.0",
 		"react-native-vector-icons": "^4.0.0",
+		"react-navigation": "^1.0.0-beta.5",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
 		"redux-thunk": "^2.2.0",
