--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 	"dependencies": {
 		"react": "~15.4.0",
 		"react-native": "0.41.2",
+		"react-native-config": "^0.3.1",
 		"react-native-i18n": "^1.0.0",
 		"react-native-simple-store": "^1.1.0",
 		"react-native-vector-icons": "^4.0.0",
-		"react-navigation": "^1.0.0-beta.5",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
 		"redux-thunk": "^2.2.0",
@@ -22,7 +22,8 @@
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
 		"jest": "19.0.2",
-		"react-test-renderer": "~15.4.0"
+		"react-test-renderer": "~15.4.0",
+		"reactotron-react-native": "^1.7.0"
 	},
 	"jest": {
 		"preset": "react-native"
