--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react-native": "0.41.2",
 		"react-native-config": "^0.3.1",
 		"react-native-i18n": "^1.0.0",
+		"react-native-navigation": "^1.0.30",
 		"react-native-simple-store": "^1.1.0",
 		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.3",
